external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_literal_2.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_2024/matching/invalid_literal_2.move:9:13
  │
7 │     fun test(opt: &Option<u8>) {
  │                           -- Expected: 'u8'
8 │         match (opt) {
9 │             Option::Some(false) => (),
  │             ^^^^^^^^^^^^^^^^^^^
  │             │            │
  │             │            Given: 'bool'
  │             Invalid pattern

error[E04007]: incompatible types
   ┌─ tests/move_2024/matching/invalid_literal_2.move:10:13
   │
 7 │     fun test(opt: &Option<u8>) {
   │                           -- Expected: 'u8'
   ·
10 │             Option::Some(true) => (),
   │             ^^^^^^^^^^^^^^^^^^
   │             │            │
   │             │            Given: 'bool'
   │             Invalid pattern
